@@ -16,10 +16,7 @@
     along with this program; if not, write to the Free Software
     Foundation, 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. */
 
-#ifdef HAVE_CONFIG_H
 #include "config.h"
-#endif
-
 #include "basicdefs.h"
 #include "regexp.h"
 #include <stdio.h>
